# DPSAThirdSemester

./: .gitignore
5_1/code/: CMakeLists.txt
5_1/code/src/: 1a.cpp  1b.cpp  1c.cpp  2a.cpp  2b.cpp  2c.cpp  3a.cpp  3b.cpp
5_2/code/: CMakeLists.txt  records100.csv  records1000.csv  records10000.csv
5_2/code/src/: 1.cpp  1.hpp  2.cpp  2.hpp  3.cpp  3.hpp  binary_search.cpp  generator.cpp  linear_search.cpp  record.cpp  record.hpp
6_1/code/: CMakeLists.txt  compile_commands.json
6_1/code/src/: generator.cpp  generator.hpp  hashset.cpp  hashset.hpp  record.cpp  record.hpp  repl.cpp  repl.hpp
6_2/code/: CMakeLists.txt  compile_commands.json  patterns.txt  sample.txt
6_2/code/src/ex1/: main.cpp
6_2/code/src/ex2/: bmh.cpp  bmh.hpp  hashset.hpp  main.cpp
7_1/code/: CMakeLists.txt  compile_commands.json
7_1/code/src/: avl_tree.hpp  avl_tree_functions.cpp  avl_tree_functions.hpp  dot.cpp  dot.hpp  main.cpp  repl.cpp  repl.hpp
