cmake_minimum_required(VERSION 3.30.1)

project(SIAOD_5_1)

add_executable(1a "src/1a.cpp")
add_executable(1b "src/1b.cpp")
add_executable(1c "src/1c.cpp")

add_executable(2a "src/2a.cpp")
add_executable(2b "src/2b.cpp")
add_executable(2c "src/2c.cpp")

add_executable(3a "src/3a.cpp")
add_executable(3b "src/3b.cpp")
